--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://M4theus13.github.io/Front_End_Gerenciamento_de_Risco",
+  "homepage": "https://M4theus13.github.io/",
   "name": "projeto-gerenciamente-de-riscos-front-end",
   "private": true,
   "version": "0.0.0",
